# sagan_firmware

./: .gitignore  CMakeLists.txt
doc/: wiring
include/: dwm_pico_AS5600.h  motor_driver.hpp  motor_speed_control.hpp  quadrature_encoder.hpp  sagan_foc_control.hpp
log/: devttyACM0_2025_01_08.10.39.33.361.txt  devttyACM0_2025_01_08.10.39.56.163.txt
src/: CMakeLists.txt  magnetic_encoder.c  motor_driver.cpp  motor_speed_control.cpp  quadrature_encoder.cpp  sagan_firmware.cpp  sagan_foc_control.cpp
